# auto_earning_forcasting

./: .env.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  HANDOFF.md  README.md  pyproject.toml
.claude/: launch.json  settings.json
backend/: API.md  README.md  config.json  run-replica.sh  run.sh
backend/app/: config.py  control.py  curriculum.py  data.py  db.py  evidence.py  jobs.py  main.py  method.py  quotes.py  replica.py  state.py
backend/state/: watchlist.json
backend/tests/: test_dual_engine_dashboard.py  test_evidence_store.py  test_job_engine_defaults.py  test_job_idempotency.py  test_job_queue.py  test_method_api.py  test_model_view.py  test_replica_mode.py  test_runner_deployment.py  test_safe_job_log.py  test_training_round_flexibility.py
company-evidence-research/assets/: capability.json
company-evidence-research/evals/: evals.json
company-financial-forecasting/: SKILL.md
deploy/forecast_runner/: README.md  bootstrap.sh  create_replica_bundle.sh  pull_and_prune.sh  pull_replica.sh  render_units.py  scheduled_backup.sh  sync_to_runner.sh  watchdog.py
docs/: 2026-07-21-mrvl-run-log-forensics.md  mcp-selection.md
docs/plans/: 2026-07-18-sandisk-financial-model.md  2026-07-20-aws-sg-forecast-runner.md  2026-07-20-youtube-research-mcp.md  (+8 more)
forecasting-system-contracts/: protocol_manifest.json
scripts/: verify_mcp.py
technology-company-forecasting-trainer/: LICENSE.txt  SKILL.md  pytest.ini
tests/: test_sandisk_model.py  test_verify_mcp.py
webapp/: app.js  index.html  replica-controls.js  runtime-preferences.js  style.css
(+400 files in other folders)
